--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -160,8 +160,11 @@ select {
 .chat .username {
   padding: 4px;
   color: #fff;
-  font-weight: 700;
   background-color: rgb(255, 50, 100);
+}
+
+.chat .username--friend {
+  font-weight: 700;
 }
 
 .chat .message {
